--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
             <h3>Archivos disponibles</h3>
             <ul id="filesList">
               </ul> 
+              <input type="number" name="gruop" id="group">
+              <button type="button" onclick="createFile()">Create File</button>
         </div>
         <div class="content">
-            <form id="form">
+            <!-- <form id="form" class="form">
                 <input type="text" placeholder="Nombre del archivo" id="fileName">
                 <textarea name="content" id="content" cols="30" rows="10" placeholder="Escriba lo que quiera aqui"></textarea>
                 <button type="button" onclick="SendText()">Enviar</button>
-            </form>
+            </form> -->
+
+            <textarea name="content" id="datos" cols="30" rows="10" placeholder="Escriba lo que quiera aqui">
+
+            </textarea>
         </div>
       </section>
       
