--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#">
-    <title>Document</title>
+    <title>Pixar-Grupo1</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.cdnfonts.com/css/pixar" rel="stylesheet">
                 
@@ -19,19 +19,20 @@
             <h1>Taller de Seguridad Informatica - Grupo 1</h1>
         </div>
     </header>
-    <section class="layout">
+    <section class="layout" id="cloud-intro">
         <div class="users">
             <h3>Usuario conectados</h3>
-            <ul id="usersList">
+            <ul class="divicon_img" id="usersList">
             </ul> 
         </div>
         <div class="files">
             <h3>Archivos disponibles</h3>
             <ul id="filesList">
               </ul> 
+              <div class="lineaBoton">
               <input type="number" name="gruop" id="group">
               
-              <button type="button" onclick="createFile()">Crear Archivo</button>
+              <button type="button" onclick="createFile()">Crear Archivo</button></div>
         </div>
         <div class="content">
             <!-- <form id="form" class="form">
