--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     </header>
     <section class="layout" id="cloud-intro">
         <div class="users">
-            <h3>Usuario conectados</h3>
+            <h3>Escritores Conectados</h3>
             <ul class="divicon_img" id="usersList">
             </ul> 
         </div>
         <div class="files">
-            <h3>Archivos disponibles</h3>
+            <h3>Guiones</h3>
             <ul id="filesList">
               </ul> 
               <div class="lineaBoton">
@@ -40,7 +40,7 @@
                 <textarea name="content" id="content" cols="30" rows="10" placeholder="Escriba lo que quiera aqui"></textarea>
                 <button type="button" onclick="SendText()">Enviar</button>
             </form> -->
-            <h3>Modifique el archivo</h3>
+            <h3>Escribe tu guion!</h3>
             <textarea name="content" id="datos" cols="30" rows="10" placeholder="Escriba lo que quiera aqui">
 
             </textarea>
