--- a/index.html
+++ b/index.html
@@ -45,5 +45,22 @@
       </section>
       
     <script src="index.js"></script>
+    
+    <a href="#openModal">Lanzar el modal</a>
+
+    <div id="openModal" class="modalDialog">
+        <div id="modal-content">
+            <a href="#close" title="Close" class="close">X</a>
+            <h1>Bienvenido al Taller de Seguridad Informatica</h1>
+            <p>Selecciona un personaje:</p>
+            <div class="personajes">
+                <div class="iconos cosas"></div>
+                <div class="iconosA cosas"></div>
+                <div class="iconosV cosas"></div>
+                <div class="iconosL cosas"></div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
