--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="content">
             <h3>Escribe tu guion!</h3>
-            <textarea name="content" id="datos" cols="30" rows="10" placeholder="Escriba aquí lo que quiera..."></textarea>
+            <textarea name="content" id="datos" cols="30" rows="10" placeholder="Escriba aquí lo que quiera..." disabled></textarea>
            
 
             
